fix color contrast

--- a/style.css
+++ b/style.css
@@ -73,7 +73,7 @@ textarea{
     text-align: center;
     padding: 0.5em 1%;
     color: white;
-    background-color: red;
+    background-color: #B30000;
     position: fixed;
     bottom: 0;
 }
